[package]
name = "osc-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "~0.10"
# clap = "4.5.0"
clap = { version = "4.5.0", features = ["cargo"] }
# argparse-rs = "0.1.0"
# argparse-rs = { git = "https://github.com/funatsufumiya/argparser-rs.git", branch = "master" }
chrono = "0.4.19"
rand = "0.8.5"