[package]
name = "osc-tester"
version = "0.2.4"
edition = "2021"
authors = ["Fumiya Funatsu <funatsu.fumiya@gmail.com>"]

license = "WTFPL"
description = "A simple OSC tester"
repository = "https://github.com/funatsufumiya/osc_tester_rs"
readme = "README.md"
keywords = ["osc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "~0.10"
clap = { version = "4.5.0", features = ["cargo"] }
chrono = "0.4.19"
rand = "0.8.5"
